--- a/templates/courrier/exShow.html.twig
+++ b/templates/courrier/exShow.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}Pieces{% endblock %}
 {% block navbar %}
-
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,7 +32,7 @@
                         {% if i == 0 %}
                             <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
                         {% else %}
-                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter "> </span>
                         {% endif %}
                         {# fin #}
                     </a>
@@ -64,6 +63,7 @@
                                     </a>
                                 {% endif %}
                             {% endfor %}
+
                         {% endif %}
 
 
@@ -112,183 +112,152 @@
     </header>
 {% endblock %}
 {% block body %}
-
     <fieldset class="border" style="width:400px; height:auto; margin-left:30px;" >
         <legend class="w-auto font-weight-bold "><h3>Notes sur ce courrier</h3> </legend>
-            <h6> {{ courrier.notes }} </h6>
+
+        {% set notes= courrier.notes|split('/')%}
+        {% set lnotes = notes|length - 1 %}
+        {% for note in notes %}
+            <h6> - {{ note }} </h6>
+        {% endfor %}
     </fieldset>
-<div class="row text-center" style="margin-top: 30px">
-    <div class="col-12 justify-content-center">
-        <div class="card card-trap"><div class="card-header">  <h1>Pieces</h1></div>
-            <div class="card-body">
-                 <table class="table table-striped table-bordered " id="data_table">
-        <thead>
-        <tr>
-            
-            <th>Nom du courrier</th>
-            <th>nom</th>
-            <th>N° BL</th>
-            <th>prenom</th>
-            <th>numero</th>
-            <th>Valide</th>
-           {# <th>Entrée</th> #}
-        </tr>
-        </thead>
-        <tbody>
-            {% set nbre_pieces = upload|length %}
-            {% set nbre_pieces_check = 0 %}
-            {% for piece in upload %}
-                <tr>
-
-                    <td>{{ piece.courier.nomC }} </td>
-
-                    <td>{{ piece.nom }}</td>
-                    <td>{{ piece.NBL }}</td>
-                    <td> {{ piece.prenom }} </td>
-                    <td> {{ piece.numero }} </td>
-                    {% set isChecked = piece.valideRecipient != 0 ? 'checked' : ''  %}
-                    {% set isDisabled = piece.isDisabled != 0 ? 'disabled' : ''  %}
-                    <td> <input type="checkbox" {{ isChecked }} class="form-control boxcheck" data-id="{{ piece.id }}" onchange="setValidate({{ piece.id }})" {{ isDisabled }}>
-
-                     {% if piece.valideRecipient == 1 %}
-                            {% set nbre_pieces_check = nbre_pieces_check + 1 %}
-                        {% endif %}
-                    </td>
-                   {# <td>
-                        <input type="text" class="form-control">
-                    </td>
-                    #}
-
-                </tr>
-
-            {% endfor %}
-        </tbody>
-    </table>
-                {% set valid = (nbre_pieces == nbre_pieces_check) ? '' : 'd-none'  %}
-                <a href="{{path('received')}}" class="btn btn-success {{ valid }}"  id="btn-validate" onclick="confirm()"> validation</a>
-            </div>
-
-        </div>
-    </div>
-</div>
-
-
-
-   {# <button class="btn btn-primary add" onclick="ajoutLigne()"> Ajouter </button>
-    <button class="btn btn-danger del" onclick="delLigne()"> supprimer </button>
-
-   
-    <button class="btn btn-dark" onclick="Save()"> Enregistrer</button> #}
-
-
     {#-------------------- notes de retour------------------------#}
-  
-    <fieldset class="border float-right" style="margin:0px;padding:0px;width:500px;height:200px;" >
+        {#----------- V1--------------#}
+
+
+    <fieldset id="joker" class="" style="/*margin:0px;padding:0px;width:500px;height:200px;*/width:500px;position:absolute;right:12px;top:70px;margin-bottom:200px;margin-right:100px;" >
        <legend  class="w-auto">Notes d'erreur</legend>
-       {{ form_start(form) }}
+        <input type="textarea" class="form-control" id="notes">
+      <button class="btn btn-outline-warning waves-effect" onclick="renvoyer()"> Envoyer</button>
+    </fieldset>
+
+    {#----------- V2--------------
+    <fieldset id="joker" class="" style="margin:0px;padding:0px;width:500px;height:200px;/*width:500px;position:absolute;right:12px;top:70px;margin-bottom:200px;margin-right:100px;*/" >
+        <legend  class="w-auto">Notes d'erreur</legend>
+        {{ form_start(form) }}
         <div id="notes">
-          {{ form_widget(form.notes) }}
+            {{ form_widget(form.notes) }}
         </div>
         <div class="d-none">
-          {{ form_label(form.nom_c) }}
-          {{ form_widget(form.nom_c) }}
+            {{ form_label(form.nom_c) }}
+            {{ form_widget(form.nom_c) }}
         </div>
         <div class="d-none">
-          {{ form_label(form.status) }}
-          {{ form_widget(form.status) }}
+            {{ form_label(form.status) }}
+            {{ form_widget(form.status) }}
         </div>
         <div class="d-none">
-          {{ form_label(form.recipient) }}
-          {{ form_widget(form.recipient) }}
+            {{ form_label(form.recipient) }}
+            {{ form_widget(form.recipient) }}
         </div>
         <div class="d-none">
-          {{ form_label(form.fichier) }}
-          {{ form_widget(form.fichier) }}
-      </div>
+            {{ form_label(form.fichier) }}
+            {{ form_widget(form.fichier) }}
+        </div>
         {{ form_widget(form.envoyer) }}
         {{ form_end(form) }}
-    </fieldset>
+    </fieldset> #}
 
     {#-------------------- fin notes de retour------------------------#}
 
+    <div class="row text-center" style="margin-top: 70px;">
+        <div class="col-12 justify-content-center">
+            <div class="card card-trap"><div class="card-header">  <h1>Pieces</h1></div>
+                <div class="card-body">
+                    <table class="table table-striped table-bordered " id="data_table">
+                        <thead>
+                        <tr>
+
+                            <th class="text-center" >N° cmd</th>
+                            <th class="text-center" > N° récept </th>
+                            <th class="text-center" >N°BL</th>
+                            <th class="text-center">Fournisseur</th>
+                            <th class="text-center">Rayon</th>
+                            <th class="text-center">D.réception</th>
+                            <th class="text-center">Montant HT</th>
+                            <th class="text-center">v.envoyeur</th>
+                            <th class="text-center">Valide</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            {% set nbre_pieces = pieces|length %}
+                            {% set nbre_pieces_check = 0 %}
+                            {% for piece in pieces %}
+                                <tr>
+                                    <td>{{ piece.nCMD}} </td>
+                                    <td>{{ piece.nRecept}} </td>
+                                    <td> {{ piece.nBL}} </td>
+                                    <td>{{ piece.fournisseur }}</td>
+                                    <td> {{ piece.rayon }} </td>
+                                    <td> {{ piece.DReception }} </td>
+                                    <td> {{ piece.montantHT }} </td>
+                                   <td>
+                                       {#affichage de la validation de l'envoyeur #}
+                                    {% set checked = piece.secondValide != 0 ? 'checked' : ''  %}
+                                    <input type="checkbox" {{ checked }} class="form-control"  disabled  >
+                                   </td>
+
+                                    {% set isChecked = piece.valideRecipient != 0 ? 'checked' : ''  %}
+                                    {% set isDisabled = piece.isDisabled != 0 ? 'disabled' : ''  %}
+                                    <td> <input type="checkbox" {{ isChecked }} class="form-control boxcheck" data-id="{{ piece.id }}" onchange="setValidate({{ piece.id }})" {{ isDisabled }}>
+                                     {% if piece.valideRecipient == 1 %}
+                                            {% set nbre_pieces_check = nbre_pieces_check + 1 %}
+                                        {% endif %}
+                                    </td>
+                                </tr>
+
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    {% set valid = (nbre_pieces == nbre_pieces_check)   ? '' : 'd-none'  %}
+                    {% set dis = courrier.valider == 1 ? 'd-none' : ' ' %}
+
+                    <a href="{{path('received')}}" class="btn btn-success {{ valid }} {{ dis }}"  id="btn-validate" onclick="confirm()" {{ dis }}> validation</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script>
-              var nbPiece = {{ nbre_pieces }};
-
+        var nbPiece = {{ nbre_pieces }};
         var nbChecked = {{ nbre_pieces_check }};
-        //Ajout de ligne
-      /*  var ligne="<tr class='ligne'><td><input type='checkbox'  name='select' ></td><td><input type='text' class='form-control courier'  ></td> <td><input type='text' class='form-control nom' name='' ></td> <td><input type='text' name='' class='form-control prenom'></td> <td><input type='text' name='' class='form-control numero'></td> <td><input type='checkbox'  class='form-control boxcheck' name='' ></td>";
-        function ajoutLigne()
-        {
-            $(".table_data > tbody:last").append(ligne);
-        }
-        function delLigne()
-        {
-            $(".table_data").find('input[name="select"]').each(function(){
-                if($(this).is(":checked"))
-                {
-                    $(this).parents("table.table_data tr").remove();
-                }
-            })
-        }*/
-    //methode pour enregistrer en BD les ajouts et suppressions
-    /*    function Save()
-        {
-            
-            var tab_lignes = [];
-            $.each($('.ligne') , function (index,value) {
-                var el_courier = value.getElementsByClassName('courier')
-                var courier = $(el_courier).val();
-                var el_nom = value.getElementsByClassName('nom')
-                var nom = $(el_nom).val();
-                var el_prenom = value.getElementsByClassName('prenom')
-                var prenom = $(el_prenom).val();
-                var el_numero = value.getElementsByClassName('numero')
-                var numero = $(el_numero).val();
-                var el_boxcheck = value.getElementsByClassName('boxcheck')
-                var boxcheck = $(el_boxcheck).is(":checked");
 
-               var ligne = {
-                   'courier' : courier,
-                   'nom' : nom,
-                   'prenom' : prenom,
-                   'numero' : numero,
-                   'boxcheck' : boxcheck,
-               }
-                tab_lignes.push(ligne);
-
-            });
-
-            console.log('tab_lignes')
-            console.log(tab_lignes)
+        function renvoyer()
+        {
+            var erreur = document.getElementById("notes").value;
+            console.log(document.getElementById("notes").value);
             $.ajax({
-
-                method:'POST',
-                data:{tab: tab_lignes, id: id},
-                success:function(){
+                url : '{{ path('excel',{id: courrier.id}) }}' ,
+                method : 'POST',
+                data : {errnotes : erreur },
+                success: function(){
+                    bootbox.alert('envoye du rapport d\'erreur effectuée');
+                    window.location.replace("{{path('send')}}");
 
                 }
-
             })
-        }*/
-                // ajax modification de la valeur de la colone validate
-            function setValidate(id){
-                $.ajax({
-                    url : '{{ path('ajax_validate_courier') }}' ,
-                    method : 'POST',
-                    data : {id : id },// @ToDo recuperer id
-                    success : function (data) {
-                        if(data){
-                            nbChecked++;
-                        } else {
-                            nbChecked--;
-                        }
-                        if (nbChecked == nbPiece)
-                        {
-                            $('#btn-validate').removeClass('d-none')
-                        } else
-                            {
-                                $('#btn-validate').addClass('d-none')
-                            }
+
+        }
+        // ajax modification de la valeur de la colone validate
+        function setValidate(id){
+            $.ajax({
+                url : '{{ path('ajax_validate_courier') }}' ,
+                method : 'POST',
+                data : {id : id },// @ToDo recuperer id
+                success : function (data) {
+                    if(data){
+                        nbChecked++;
+                    } else {
+                        nbChecked--;
+                    }
+                    if (nbChecked == nbPiece)
+                    {
+                        $('#btn-validate').removeClass('d-none')
+                    } else
+                    {
+                        $('#btn-validate').addClass('d-none')
+                    }
                     }
                 });
             }
@@ -300,12 +269,13 @@
                 data : {ids : arrayIds },// @ToDo recuperer id
                 success : function (data)
                 {
-                    //debut reception php->twg
-                    //var response = JSON.parse(data);
-                   // console.log($response);
-                    // fin
+
                     $('.boxcheck').attr("disabled","disabled");
                     $('.btn-validate').attr("disabled","disabled");
+                    //debut reception php->twg
+                    //var response = JSON.parse(data);
+                    // console.log($response);
+                    // fin
 
                 }
             });
