--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -121,6 +121,7 @@
                         <table class="table table-striped table-bordered table_data">
                             <thead>
                             <tr>
+                                <th>id</th>
                                 <th>De</th>
                                 <th>email</th>
                                 <th>Nom du courrier</th>
@@ -129,7 +130,7 @@
                                 <th>Courrier</th>
                                 <th>Date</th>
                                 <th>Actions</th>
-                                {% set break = false %}
+                                {#{% set break = false %}
                                  {% for courrier in app.user.received|filter(courrier => courrier.isVerify == true) %}
                                     {% if not break %}
                                         {% if courrier.valider == 1 %}
@@ -140,7 +141,8 @@
                                     {% endif %}
 
 
-                        {% endfor %}
+                                {% endfor %}#}
+                                <th>info</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -151,6 +153,7 @@
                                         {% set bold ="font-weight-bold" %}
                                     {% endif %}
                                     <tr>
+                                        <td> {{ courrier.id }} </td>
                                         <td class="{{bold}}">{{ courrier.sender.Nom }}</td>
                                         <td class="{{bold}}">{{ courrier.sender.email }}</td>
                                         <td class="{{bold}}">{{ courrier.nomC }}</td>
@@ -164,7 +167,9 @@
                                                     <span style="background-color: #28A2E8; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
                                             {% endif %}
                                     </td>
-                                    <td class="{{bold}}"><div>{{ courrier.notes() }}</div></td>
+                                        {% set notes= courrier.notes|split('/')%}
+                                        {% set lnotes = notes|length - 1 %}
+                                    <td class="{{bold}}"><div>{{  notes[lnotes] }}</div></td>
                                     <td class="{{bold}}">{{ courrier.fichier }}</td>
                                     <td class="{{bold}}">{{ courrier.createdAt|date}}</td>
                                     {#|date("m/d/Y")#}
@@ -183,6 +188,8 @@
                                                 <td>
                                                     <img src="{{ asset('assets/svg/warning_115257.svg') }}" style="height:30px;">
                                                 </td>
+                                                {% else %}
+                                                <td></td>
                                             {% endif %}
                             {% endif %}
 
