--- a/templates/courrier/send.html.twig
+++ b/templates/courrier/send.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Courrier envoyés{% endblock %}
 {% block navbar %}
     <header>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{{ path('page_index', {id: user.id}) }}"><h2>ACCUEIL</h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                         {% if i == 0 %}
                             <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
                         {% else %}
-                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter "></span>
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter "> </span>
                         {% endif %}
                         {# fin #}
                     </a>
@@ -41,7 +41,7 @@
                         <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
                         {% if app.user.received|length == 0 %}
                             <p class="text-center"> Aucun courrier reçus </p>
-                        {% elseif  app.user.received|filter(courrier => courrier.isVerify == true) %}
+                        {% else %}
                             {% for liste in listeCourrier %}
                                 {% if liste.recipient.id == user.id %}
                                     {% set bold = "" %}
@@ -63,6 +63,7 @@
                                     </a>
                                 {% endif %}
                             {% endfor %}
+
                         {% endif %}
 
 
@@ -121,33 +122,30 @@
             <div class="card-body">
                 <table class="table table-striped table-bordered table_data">
                     <thead>
-                    <tr>
-                        <th>Vers</th>
-                        <th>email du destinataire</th>
-                        <th>Nom du courrier</th>
-                        <th>Status</th>
-                        <th>Courrier</th>
-                        <th>Date</th>
-                        {% set break = false %}
-                        {% for courrier in app.user.sent|filter(courrier => courrier.isVerify == true)%}
-                        {% if not break %}
-                                        {% if courrier.valider == 1 %}
-                                            <th>valide</th>
-                                            {% set break = true %}
-                                        {% else %}
-                                             <th>valide</th>
-                                            {% set break = true %}
-                                    
-                                        {% endif %}
-                                    {% endif %}
-                        {% endfor %}
-                    </tr>
+                        <tr>
+                            <th>Vers</th>
+                            <th>email du destinataire</th>
+                            <th>Nom du courrier</th>
+                            <th>Status</th>
+                            <th>Courrier</th>
+                            <th>Date</th>
+                            {% set break = false %}
+                            {% for courrier in app.user.sent|filter(courrier => courrier.isVerify == true)%}
+                            {% if not break %}
+                                {% if courrier.valider == 1 %}
+                                    <th>Info</th>
+                                    {% set break = true %}
+                                {% else %}
+                                    <th>Info</th>
+                                    {% set break = true %}
+                                {% endif %}
+                            {% endif %}
+                            {% endfor %}
+                        </tr>
                     </thead>
                     <tbody>
-
                     {% for courrier in app.user.sent|filter(courrier => courrier.isVerify == true)%}
                     <tr>
-
                         <td>{{ courrier.recipient.Nom }}</td>
                         <td>{{ courrier.recipient.email }}</td>
                         <td>{{ courrier.nomC }}</td>
@@ -161,27 +159,24 @@
                             {% endif %}
                         <td>{{ courrier.fichier }}</td>
                         <td>{{ courrier.createdAt|date  }}</td>
-                       
                           {% if courrier.valider == 1 %}
-                                               <td>
-                                                    <img src="{{ asset('assets/svg/Checked.svg') }}" style="height:30px;">
-                                                    {% set lc = courrier.nomC|length - 1 %}
-                                                    
-                                               </td>
-                                        {% elseif courrier.valider == 0 %}
-                                            {% if courrier.nomC|last == ')' %}
-                                                
-                                                <td>
-                                                 <img src="{{ asset('assets/svg/warning_115257.svg') }}" style="height:30px;"></td>
-                                            {% else %}
-                                                 <td>
-                                                 <img src="{{ asset('assets/svg/clock.svg') }}" style="height:30px;"></td>
-
-                                            {% endif %}
-                                            
-                                        {% endif %}
+                              <td>
+                                  <img src="{{ asset('assets/svg/Checked.svg') }}" style="height:30px;">
+                                  {% set lc = courrier.nomC|length - 1 %}
+                              </td>
+                          {% elseif courrier.valider == 0 %}
+                              {% if courrier.nomC|last == ')' %}
+                                  <td>
+                                      <img src="{{ asset('assets/svg/warning_115257.svg') }}" style="height:30px;"></td>
+                              {% elseif  courrier.nomC|last == '.'%}
+                                  <td> <img src="{{ asset('assets/svg/warning_115257.svg') }}" style="height:30px;"></td>
+                              {% else %}
+                                  <td>
+                                      <img src="{{ asset('assets/svg/clock.svg') }}" style="height:30px;"></td>
+                              {% endif %}
+                          {% endif %}
                     </tr>
-                            {% else %}
+                    {% else %}
                     <tr>
                         <td colspan="10">Aucun courrier envoyés</td>
                     </tr>
@@ -191,10 +186,10 @@
             </div>
         </div>
     </section>
-
     <a href="" class="scroll-to-top rounded" data-toggle="modal" data-target="#souscription2" style="display: inline;">
         <img src="{{asset('assets/svg/notetask.png')}}" style="height:60px;" class="joker">
     </a>
+
     {# ------------------------------------------------------------------------ #}
     <div class="modal fade" id="souscription2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
@@ -237,7 +232,7 @@
                 </div>
                 <!--Footer-->
                 <div class="modal-footer justify-content-center">
-                    <a  type="button"> {{ form_widget(form.envoyer, { 'label': 'verification' }) }} <i class="fas fa-paper-plane-o ml-1"></i></a>s
+                    <a  type="button"> {{ form_widget(form.envoyer, { 'label': 'verification' }) }} <i class="fas fa-paper-plane-o ml-1"></i></a>
                 </div>
             </div>
             {{ form_end(form) }}
