--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -1,5 +1,5 @@
+{#page des courriers reçus#}
 {% extends 'base.html.twig' %}
-
 {% block title %}Boites de réceptions{% endblock %}
 {% block navbar %}
     <header>
@@ -121,7 +121,7 @@
                         <table class="table table-striped table-bordered table_data">
                             <thead>
                             <tr>
-                                <th>id</th>
+                                <th class="d-none">id</th>
                                 <th>De</th>
                                 <th>email</th>
                                 <th>Nom du courrier</th>
@@ -130,18 +130,6 @@
                                 <th>Courrier</th>
                                 <th>Date</th>
                                 <th>Actions</th>
-                                {#{% set break = false %}
-                                 {% for courrier in app.user.received|filter(courrier => courrier.isVerify == true) %}
-                                    {% if not break %}
-                                        {% if courrier.valider == 1 %}
-                                            <th>valide</th>
-                                            {% set break = true %}
-                                    
-                                        {% endif %}
-                                    {% endif %}
-
-
-                                {% endfor %}#}
                                 <th>info</th>
                             </tr>
                             </thead>
@@ -153,11 +141,11 @@
                                         {% set bold ="font-weight-bold" %}
                                     {% endif %}
                                     <tr>
-                                        <td> {{ courrier.id }} </td>
+                                        <td class="d-none"> {{ courrier.id }} </td>
                                         <td class="{{bold}}">{{ courrier.sender.Nom }}</td>
                                         <td class="{{bold}}">{{ courrier.sender.email }}</td>
                                         <td class="{{bold}}">{{ courrier.nomC }}</td>
-                                        <td class="{{bold}}">
+                                        <td class="{{bold}}" style="width:200px;">
                                             {% if courrier.status == "TRES URGENT" %}
                                             <span style="background-color: #D31C1C; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
                                             {% elseif courrier.status == "URGENT" %}
@@ -167,7 +155,7 @@
                                                     <span style="background-color: #28A2E8; padding: 7px; border-radius: 50px; color:#fff;"> {{ courrier.status }} </span>
                                             {% endif %}
                                     </td>
-                                        {% set notes= courrier.notes|split('/')%}
+                                        {% set notes= courrier.notes|split('~')%}
                                         {% set lnotes = notes|length - 1 %}
                                     <td class="{{bold}}"><div>{{  notes[lnotes] }}</div></td>
                                     <td class="{{bold}}">{{ courrier.fichier }}</td>
@@ -175,16 +163,17 @@
                                     {#|date("m/d/Y")#}
                                     <td>
                                         <a href="{{ path("excel", {id: courrier.id}) }}" class="btn btn-info">Voir</a>
-                                        {% set files = courrier.fichier|split('/')%}
-                                        {% set lfiles = files|length - 1 %}
-                                       {# <a href="{{asset('Courrier/'~ files[lfiles]) }}" class="btn btn-dark">Telecharger</a>#}
+                                        {# bouton download
+                                        {% set files = courrier.fichier|split('~')%}
+                                          {% set lfiles = files|length - 1 %}
+                                         <a href="{{asset('Courrier/'~ files[lfiles]) }}" class="btn btn-dark">Telecharger</a>#}
                                     </td>
                                        {% if courrier.valider == 1 %}
                             <td>
                                 <img src="{{ asset('assets/svg/Checked.svg') }}" style="height:30px;">
                             </td>
                            {% elseif courrier.valider == 0 %}
-                                            {% if courrier.nomC|last == ')' %}
+                                            {% if courrier.nomC|last == ']' %}
                                                 <td>
                                                     <img src="{{ asset('assets/svg/warning_115257.svg') }}" style="height:30px;">
                                                 </td>
@@ -192,12 +181,7 @@
                                                 <td></td>
                                             {% endif %}
                             {% endif %}
-
-                                    
                             </tr>
-
-
-
                             {% else %}
                                     <tr>
                                         <td colspan="10">Aucun courrier reçus</td>
@@ -250,7 +234,6 @@
                                                             {{ form_label(form.recipient)}}
                                                             {{ form_widget(form.recipient)}}
                                                         </div>
-
                                                     </div>
                                                     <br />
                                                 </div>
@@ -260,7 +243,6 @@
                                                 </div>
                                             </div>
                                             {{ form_end(form) }}
-
                                         </div>
                                     </div>
 
