--- a/templates/courrier/verification.html.twig
+++ b/templates/courrier/verification.html.twig
@@ -1,5 +1,5 @@
+{# page de la premiere verification #}
 {% extends 'base.html.twig' %}
-
 {% block title %} verification{% endblock %}
 {% block navbar %}
 
@@ -112,7 +112,7 @@
         </nav>
     </header>
 {% endblock %}
-      {% block body %}
+{% block body %}
   <fieldset class="border" style="width:400px; height:auto; margin-left:30px;" >
       <legend class="w-auto font-weight-bold "><h4> A propos du courrier </h4> </legend>
       <p> <span class="font-weight-bold"> NOM Courrier : </span> {{ courrier.nomC }}  </p>
@@ -120,6 +120,7 @@
       <p> <span class="font-weight-bold"> Status : </span> {{ courrier.status }}  </p>
       <p> <span class="font-weight-bold"> Destinataire : </span> {{ courrier.recipient.nom }}  </p>
   </fieldset>
+
           <div class="row text-center" style="margin-top: 30px">
               <div class="col-12 justify-content-center">
                 <div class="card card-trap"><div class="card-header">  <h1>vérification des pieces</h1></div>
@@ -129,6 +130,7 @@
                         <table style="margin-top:30px;" class="table table-striped table-bordered table_data" id="da_tables">
               <thead>
               <tr>
+                  <th class="text-center" style="width:30px" >  idcourrier </th>
                   <th class="text-center" style="width:30px" >  choix </th>
                   <th class="text-center" style="width:200px" >N° cmd</th>
                   <th class="text-center" style="width:200px" > N° récept </th>
@@ -143,13 +145,15 @@
               </thead>
               <tbody>
               {% set nbPiece = 0 %}
+
               {% for piece in pieces %}
 
                   <tr class="ligne_depart" data-id="{{ piece.id }}">
+                      <td class="id_cour" data-idcour="{{ id_courrier }}"> {{id_courrier}}</td>
                       <td>  <input type="checkbox" class="del" name="select" data-ident="{{ piece.id }}"> </td>
                       <td class="text-center">{{ piece.nCMD}} </td>
                       <td class="text-center">{{ piece.nRecept}} </td>
-                      <td class="col_NBL"> <input type="text" class="form-control inp_nbl" required> </td>
+                      <td class="col_NBL" style="width:200px;"> <input type="text" class="form-control inp_nbl" required> </td>
                       <td class="text-center">{{ piece.fournisseur }}</td>
                       <td class="text-center"> {{ piece.rayon }} </td>
                       <td class="text-center"> {{ piece.DReception }} </td>
@@ -165,11 +169,8 @@
                 </div>
               </div>
           </div>
-
-          {#  atao disabled le bouton raha mbola tsy feno le nbl#}
-          {#  buton enregistrer pour enregistrer les nouvelles valeurs#}
-           {# <button class="btn btn-info float-right" style="margin-right:20px;" onclick="verificatest()"> OK </button> #}
-          <a href="{{ path('second_verification',{id: courrier.id}) }}" class="btn btn-dark float-right" style="margin-right:20px;" onclick="Save()"> Suivant</a>
+        <button class="btn btn-dark float-right" style="margin-right:20px;" onclick="Save()"> Suivant</button>
+        <button class="btn btn-danger float-left" style="margin-right:20px;" onclick="annulation()"> Annuler </button>
 
           <script>
               //pour verifier si tous les NB_L sont complétés
@@ -227,9 +228,14 @@
                   //colonne NBL
                   var id = {{ courrier.id }}
                   var tab_D = []; //tableau contenant les NBL et si la ligne est valide(checked)
+                  var ok  = true;
                   $('.ligne_depart').each(function (index, value) {
                       var el_NBL = value.getElementsByClassName('inp_nbl');
                       var nbl_d = $(el_NBL).val();
+                      if(nbl_d == "")
+                      {
+                          ok  = false;
+                      }
                       var el_checkbox = value.getElementsByClassName('boxcheck');
                       var chek = $(el_checkbox).is(":checked");
                       var id_ligne = $(this).data("id");
@@ -241,6 +247,10 @@
                       }
                       tab_D.push(ld);
                   })
+                  if(ok == false)
+                  {
+                      bootbox.alert('N\'oubliez pas de remplir le N° BL !');
+                  }
                   console.log('tableau de depart :');
                   console.log(tab_D);
                   //script pour l'ajout de ligne
@@ -276,13 +286,42 @@
                   });
                   console.log('tableau d\'ajout: ');
                   console.log(tab_lignes);
+                  console.log(ok);
 
-              $.ajax({
-                      url:'{{  path('ajax_add_line') }}',
-                      method:'POST',
-                      data:{tab: tab_lignes, id: id, tab_d: tab_D},
-                      success:function(){
-                          console.log('le contenu est sauvegarder');
+                  if (ok = true)
+                  {
+                      $.ajax({
+                          url:'{{  path('ajax_add_line') }}',
+                          method:'POST',
+                          data:{tab: tab_lignes, id: id, tab_d: tab_D},
+                          success:function(){
+                              console.log('le contenu est sauvegarder');
+                              window.location.replace("{{ path('second_verification',{id: courrier.id}) }}");
+                          }
+                      })
+                  }
+
+              }
+              function annulation()
+              {
+                  bootbox.confirm({
+                      size: "small",
+                      message: "Voulez-vous vraiment annuler?",
+                      callback: function (result) {
+                          /* result is a boolean; true = OK, false = Cancel*/
+                          if (result) {
+                             var idCourr = $('.id_cour').data("idcour");
+                              console.log(idCourr);
+                                $.ajax({
+                                  url:'{{  path('ajax_cancel') }}',
+                                  method:'POST',
+                                  data:{idC:idCourr},
+                                  success:function(){
+                                     window.location.replace("{{ path('page_index', {id: user.id}) }}");
+                                  }
+                              })
+                          }
+
                       }
                   })
               }
