--- a/templates/courrier/secondV.html.twig
+++ b/templates/courrier/secondV.html.twig
@@ -169,6 +169,7 @@
 
     <script>
      $('#data_table2').DataTable({
+         paging: false, info: false,
             "language": {
                 "lengthMenu": "Afficher _MENU_ données par pages",
                 "zeroRecords": "Nous n'avons rien trouvé - désolé",
