--- a/templates/courrier/send.html.twig
+++ b/templates/courrier/send.html.twig
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="card-body">
-                <table class="table table-striped table-bordered table_data">
+                <table class="table table-striped table-bordered tab_data">
                     <thead>
                         <tr>
 
