--- a/templates/courrier/exShow.html.twig
+++ b/templates/courrier/exShow.html.twig
@@ -139,7 +139,7 @@
         <div class="col-12 justify-content-center">
             <div class="card card-trap"><div class="card-header">  <h1>Pieces</h1></div>
                 <div class="card-body">
-                    <table class="table table-striped table-bordered " id="data_table">
+                    <table class="table table-striped table-bordered table_data">
                         <thead>
                         <tr>
 
