--- a/templates/courrier/received.html.twig
+++ b/templates/courrier/received.html.twig
@@ -118,7 +118,7 @@
                 <div class="card card-trap"><div class="card-header">  <h1>Boites de receptions</h1></div>
                     <div class="card-body">
                         <p>Total Courrier: {{app.user.received|filter(courrier => courrier.isVerify == true)|length}} </p>
-                        <table class="table table-striped table-bordered table_data">
+                        <table class="table table-striped table-bordered tab_data">
                             <thead>
                             <tr>
                                 <th class="d-none">id</th>
@@ -249,5 +249,6 @@
             {#------------------------------------------------------------------------- #}
 
 {% endblock %}
+
 
 
