--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -115,7 +115,7 @@
     <div class="container">
         <h1 class="text-center">Listes</h1>
         <a href="{{ path('user_new') }}" class="btn btn-primary">Ajouter un utilisateur</a>
-        <table class="table table-striped table-bordered table_data2 text-center">
+        <table class="table table-striped table-bordered tab_data text-center">
             <thead>
             <tr>
                 <th>Id</th>
